--- a/task/package.json
+++ b/task/package.json
@@ -10,6 +10,8 @@
     "install-node": "6.9.2"
   },
   "dependencies": {
+    "antd": "^2.10.4",
+    "babel-plugin-import": "^1.2.1",
     "babel-runtime": "^6.9.2",
     "dva": "^1.2.1",
     "react": "^15.4.0",
