--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,7 @@
 # Auto detect text files and perform LF normalization
+* text=auto
+
+# set Js line ending
 *.js text eol=lf
 
 # Custom for Visual Studio
