--- a/goal/package.json
+++ b/goal/package.json
@@ -14,11 +14,12 @@
     "babel-plugin-import": "^1.2.1",
     "babel-runtime": "^6.9.2",
     "dva": "^1.2.1",
+    "locate-path": "^2.0.0",
     "react": "^15.4.0",
     "react-dom": "^15.4.0"
   },
   "devDependencies": {
-    "babel-eslint": "^7.1.1",
+    "babel-eslint": "^7.2.3",
     "babel-plugin-dva-hmr": "^0.3.2",
     "babel-plugin-transform-runtime": "^6.9.0",
     "eslint": "^3.12.2",
