--- a/goal/package.json
+++ b/goal/package.json
@@ -10,13 +10,17 @@
     "install-node": "6.9.2"
   },
   "dependencies": {
+    "amdefine": "^1.0.1",
     "antd": "^2.10.4",
     "babel-plugin-import": "^1.2.1",
     "babel-runtime": "^6.9.2",
     "dva": "^1.2.1",
+    "has-flag": "^2.0.0",
+    "jscs": "^3.0.7",
     "locate-path": "^2.0.0",
     "react": "^15.4.0",
-    "react-dom": "^15.4.0"
+    "react-dom": "^15.4.0",
+    "remove-trailing-separator": "^1.0.2"
   },
   "devDependencies": {
     "babel-eslint": "^7.2.3",
@@ -26,7 +30,7 @@
     "eslint-config-airbnb": "^13.0.0",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^2.2.3",
-    "eslint-plugin-react": "^6.8.0",
+    "eslint-plugin-react": "^7.0.1",
     "expect": "^1.20.2",
     "husky": "^0.12.0",
     "redbox-react": "^1.3.2",
