--- a/goal/.roadhogrc
+++ b/goal/.roadhogrc
@@ -14,5 +14,12 @@
       	 ["import", { "libraryName": "antd", "style": "css" }]
       ]
     }
+  },
+  "proxy": {
+    "/api": {
+      "target": "http://jsonplaceholder.typicode.com/",
+      "changeOrigin": true,
+      "pathRewrite": { "^/api" : "" }
+    }
   }
 }
