--- a/goal/.eslintrc
+++ b/goal/.eslintrc
@@ -22,7 +22,8 @@
     "no-bitwise": [0],
     "no-cond-assign": [0],
     "import/no-unresolved": [0],
-    "require-yield": [1]
+    "require-yield": [1],
+    "no-console": [0]
   },
   "parserOptions": {
     "ecmaFeatures": {
